# bevy_parquet

./: .gitignore  Cargo.toml
examples/: basic_serialization.rs
src/: config.rs  lib.rs  serialization.rs  state.rs  writer.rs
